2006-10-24  Richard Sandiford  <richard@codesourcery.com>

	* src/prelink.h (PLArch): Add an arch_prelink_conflict callback.
	* src/conflict.c (prelink_build_conflicts): If defined, call it
	for each dependency.

	* src/prelink.h (PLArch): Make the arch_prelink callback take
	a "struct prelink_info *" argument, not a "DSO *" argument.
	* src/prelink.c (prelink): Adjust call accordingly.
	* src/arch-alpha.c (alpha_arch_prelink): Adjust definition accordingly.
	* src/arch-arm.c (arm_arch_prelink): Likewise.
	* src/arch-cris.c (cris_arch_prelink): Likewise.
	* src/arch-i386.c (i386_arch_prelink): Likewise.
	* src/arch-ia64.c (ia64_arch_prelink): Likewise.
	* src/arch-ppc.c (ppc_arch_prelink): Likewise.
	* src/arch-s390.c (s390_arch_prelink): Likewise
	* src/arch-s390x.c (s390x_arch_prelink): Likewise
	* src/arch-sh.c (sh_arch_prelink): Likewise.
	* src/arch-sparc64.c (sparc64_arch_prelink): Likewise.
	* src/arch-sparc.c (sparc_arch_prelink): Likewise
	* src/arch-x86_64.c (x86_64_arch_prelink): Likewise.

	* src/prelink.h (PLArch): Add an arch_adjust callback.
	* src/dso.c (adjust_dso): Use it, if defined.

	* src/prelink.h (adjust_symbol_p): Declare.
	* src/dso.c (adjust_symbol_p): New function, extracted from...
	(adjust_symtab): ...here.

2006-10-27  Jakub Jelinek  <jakub@redhat.com>

	* src/dwarf2.c (adjust_dwarf2_ranges): Fix adjusting if end of range
	is at the end of some section and there is padding before the
	following one.

2006-07-28  Alexandre Oliva  <aoliva@redhat.com>

	* src/cache.c (deps_cmp): Avoid segfault if both a and b are NULL.

2001-05-24  Jakub Jelinek  <jakub@redhat.com>

	* The beginning.